--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -1,21 +1,33 @@
+body{
+   background-image: url("https://previews.123rf.com/images/cienpies/cienpies1503/cienpies150300084/37545825-amor-iconos-de-comida-ilustraci%C3%B3n-de-fondo-ideal-para-el-men%C3%BA-del-restaurante-de-libro-y-p%C3%A1gina-web-eps-10-ar.jpg");
+}
 
 h1{ 
-    color:green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:rgb(9, 0, 128);
 }
 
 img{
+    
     width: 400px;
 }
 
 #thirdDiv {
+    
     height: 600px;  width: 500px;
-    background-color: red;
-    padding: 50px;
-    border:10px blue; 
+      background-color:greenyellow;
+        padding: 50px;
+           border:10px red; 
 }
 
  #spanId {
     font-size: 18px; 
-    margin: 50px;
+       margin: 50px;
  }
+
+
+ 
+     
 
